--- a/assets/styles/components/button/all.scss
+++ b/assets/styles/components/button/all.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "component";
 @import "product-tabs";
+@import "login-button";
 @import "qty-button";
 @import "order-button";
 @import "coupon-button";
