--- a/assets/styles/components/button/_component.scss
+++ b/assets/styles/components/button/_component.scss
@@ -1,5 +1,8 @@
 %btn {
   all: unset;
+  border: unset;
+  background: unset;
+  color: unset;
   border-radius: $btn-default-radius;
   padding: $btn-default-padding;
   color: $btn-default-color;
