--- a/templates/views/woocommerce/single-product.html.twig
+++ b/templates/views/woocommerce/single-product.html.twig
@@ -8,9 +8,10 @@
 
     <div class="container auto product">
         <main class="grid">
-            <section class="col-9 content">
+            <section class="col-8 content">
                 {{ include('partials/woocommerce/product/tabs.html.twig') }}
             </section>
+            <div class="col-1">&nbsp;</div>
             <div class="col-3">
                 {{ include('partials/woocommerce/product/sidebar.html.twig') }}
             </div>
