--- a/templates/partials/tease/product-horizontal.html.twig
+++ b/templates/partials/tease/product-horizontal.html.twig
@@ -55,6 +55,7 @@
         </span>
         <form class="js-add-to-cart-form product-card--h--add-to-cart-form">
             <input type="hidden" id="product_id" name="product_id" value="{{ product.ID }}" />
+            <input type="hidden" id="product_id" name="add-to-cart" value="{{ product.ID }}" />
             <input type="hidden" id="quantity" name="quantity" value="1" />
             {% if _product.get_type is not same as('variable') %}
                 <button type="submit" class="product-card--add-to-cart product-card--h--add-to-cart">
