--- a/templates/views/woocommerce/archive-product.html.twig
+++ b/templates/views/woocommerce/archive-product.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
 {% block content %}
+    {% do fn('wc_print_notices') %}
     <div class="container auto mobile-padded">
         <h1 class="page-title">{{ title }}</h1>
         <main class="grid">
@@ -8,10 +9,13 @@
                 {{ theme.theme_mod('store_archive_filter_shortcode')|shortcodes }}
             </div>
             <section class="col-9 products">
+                {% do action('woocommerce_before_shop_loop') %}
                 {% for product in products %}
                     {{ include('partials/tease/product-horizontal.html.twig', { product: product }, with_context = false) }}
                 {% endfor %}
+                {% do action('woocommerce_after_shop_loop') %}
             </section>
         </main>
     </div>
+    {% do action('woocommerce_after_main_content') %}
 {% endblock %}
