--- a/templates/partials/woocommerce/product/header.html.twig
+++ b/templates/partials/woocommerce/product/header.html.twig
@@ -4,7 +4,7 @@
     {% set _header_img = post.thumbnail %}
 {% endif %}
 
-<header class="product-header" style="background-image: url({{ _header_img.src('large') }})">
+<header class="product-header" style="background-image: url({{ _header_img.src('full') }})">
     <div class="container auto flex">
         <aside class="product-header__floater">
                 <span class="product-header__category">
