--- a/templates/partials/header/topper.html.twig
+++ b/templates/partials/header/topper.html.twig
@@ -2,7 +2,7 @@
 <header class="header content">
     <div class="container auto flex size-full">
         <span class="header-usp">
-            <i class="fas fa-check"></i> Bestel onze ingenieursdiensten snel en eenvoudig online
+            <i class="fas fa-check"></i> {{ __('Bestel nu onze diensten en producten snel en eenvoudig online', 'agws')}}
         </span>
 
         <nav class="ml-auto top-navigation">
