--- a/templates/partials/woocommerce/variation/sidebar.html.twig
+++ b/templates/partials/woocommerce/variation/sidebar.html.twig
@@ -33,7 +33,7 @@
 
     </form>
 
-    {% if product.is_in_stock %}
+    {% if product.is_in_stock and 1 is same as(0) %}
         <p>
             <span class="product-status available">
                 <span class="fa-stack">
