Added custom page template for content pages

--- a/templates/views/pages/content.html.twig
+++ b/templates/views/pages/content.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
 {% block content %}
-    <main class="container mx-auto content">
+    <main class="container auto content">
         <h1 class="page-title">
             {{ post.title }}
         </h1>
