--- a/templates/partials/woocommerce/variation/sidebar.html.twig
+++ b/templates/partials/woocommerce/variation/sidebar.html.twig
@@ -33,7 +33,7 @@
 
     </form>
 
-    {% if product.is_in_stock and 1 is same as(0) %}
+    {% if product.is_in_stock %}
         <p>
             <span class="product-status available">
                 <span class="fa-stack">
@@ -41,7 +41,7 @@
                     <i class="fas fa-check fa-stack-1x" style="color: #fff"></i>
                 </span>
                 Beschikbaar:
-            </span> binnen 3 weken gerealiseerd
+            </span>
         </p>
     {% endif %}
 
