Fixed checkmark stacking

--- a/templates/partials/woocommerce/product/sidebar.html.twig
+++ b/templates/partials/woocommerce/product/sidebar.html.twig
@@ -21,7 +21,7 @@
     {% if product.is_in_stock %}
         <span class="product-status available">
             <span class="fa-stack">
-                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fas fa-circle fa-stack-2x" style="width: 2rem;"></i>
                 <i class="fas fa-check fa-stack-1x" style="color: #fff"></i>
             </span>
             Beschikbaar:
