--- a/templates/partials/woocommerce/product/sidebar.html.twig
+++ b/templates/partials/woocommerce/product/sidebar.html.twig
@@ -24,7 +24,7 @@
                 <i class="fas fa-circle fa-stack-2x" style="width: 2rem;"></i>
                 <i class="fas fa-check fa-stack-1x" style="color: #fff"></i>
             </span>
-            Beschikbaar:
+            Beschikbaar
         </span>
     {% endif %}
 
