--- a/templates/partials/tease/product-horizontal.html.twig
+++ b/templates/partials/tease/product-horizontal.html.twig
@@ -18,7 +18,7 @@
     </figure>
 
     <main class="product-card--h--content">
-        <small class="product-card--h--category">
+        <small class="product-card--h--category" hidden>
             {{ fn('wc_get_product_category_list', _product.get_id) }}
         </small>
         <h3 class="product-card--h--title">
