--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -25,7 +25,7 @@ footer.footer {
 
 .footer-menu-item {
   display: block;
-  margin: get-spacing('md') 0;
+  margin: get-spacing('sm') 0;
   color: $white;
   text-decoration: none;
 }
