--- a/templates/partials/woocommerce/checkout/review-order.html.twig
+++ b/templates/partials/woocommerce/checkout/review-order.html.twig
@@ -1,7 +1,5 @@
-<table class="table table--checkout--review-order">
-    <thead class="table-header table-header--checkout--review-order">
-
-    </thead>
+<table class="table table--checkout--review-order woocommerce-checkout-review-order-table" id="order_review">
+    <thead class="table-header table-header--checkout--review-order"></thead>
 
     <tbody class="table-body table-body--checkout--review-order">
         {% for key, product in cart_items %}
@@ -14,7 +12,9 @@
                 </td>
 
                 <td class="checkout-title" data-title="{{ __('Product', 'woocommerce') }}">
-                    {{ product.data.get_name }}
+                    <a href="{{ _product.get_permalink }}" target="{{ _product.get_slug }}">
+                        {{ product.data.get_name }}
+                    </a>
                 </td>
 
                 <td class="checkout-qty" data-title="{{ __('Quantity', 'woocommerce') }}">
@@ -28,9 +28,16 @@
                 </td>
             </tr>
         {% endfor %}
+
+    {% do action('woocommerce_review_order_after_cart_contents') %}
     </tbody>
 
-    <tfoot class="table-footer table-footer--checkout--review-order">
+
+    <tfoot class="table-footer table-footer--checkout--review-order woocommerce-checkout-review-order-table">
+        {% do action('woocommerce_review_order_before_shipping') %}
+        {{ fn('wc_cart_totals_shipping_html') }}
+        {% do action('woocommerce_review_order_after_shipping') %}
+
         <tr class="table-row table-row--checkout--footer">
             <th class="table-head table-head--checkout--footer" colspan="3">
                 Subtotaal
@@ -49,6 +56,7 @@
             </td>
         </tr>
 
+        {% do action('woocommerce_review_order_before_order_total') %}
         <tr class="table-row table-row--checkout--footer">
             <th class="table-head table-head--checkout--footer" colspan="3">
                 Totaal
@@ -57,5 +65,6 @@
                 {{ fn('wc_cart_totals_order_total_html') }}
             </td>
         </tr>
+        {% do action('woocommerce_review_order_after_order_total') %}
     </tfoot>
 </table>
